tests/type-error/AmbiguousConstructor.vix
type Bool1 where
  F T : Bool1

type Bool2 where
  F T : Bool2

type Bool3 where
  F T : Bool3

type Sausage where
  saus saus2 : Sausage

the : (a : Type) -> a -> a
the _ x = x

false x = case x of
  T -> 1
  F -> 0
